# Algorithms-and-Data-Structures

./: README.md
EP1_Biologia_Computational/: CMakeLists.txt  main.c
EP2_Polinomios/: CMakeLists.txt  cliente.c  fila.h  fila_lista_ligada.c  item.h  main.c  mallocc.c  malocc.c  malocc.h  pilha.h  pilha_lista_ligada.c  polinomio.c  polinomio.h
Filas/: CMakeLists.txt  fila.h  fila_lista_ligada.c  item.h  main.c  mallocc.c  mallocc.h
listas_ligadas/: CMakeLists.txt  exercicios_Feofiloff.c  exercicios_Feofiloff.h  functions.c  functions.h  item.h  main.c
mergesort/: CMakeLists.txt  main.c
vetores/: CMakeLists.txt  main.c
